2007-11-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Eliminate PowerPC specific elements from the CPU
	Table. They have been replaced with variables named bsp_XXX as
	needed.

2007-09-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* configure.ac, startup/bspstart.c: Add BSP_DIRTY_MEMORY option.

2007-09-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1257/bsps
	* irq/irq.c: Code outside of cpukit should use the public API for
	rtems_interrupt_disable/rtems_interrupt_enable. By bypassing the
	public API and directly accessing _CPU_ISR_Disable and
	_CPU_ISR_Enable, they were bypassing the compiler memory barrier
	directive which could lead to problems. This patch also changes the
	type of the variable passed into these routines and addresses minor
	style issues.

2007-07-06	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* irq_init.c, Makefile.am: adapted to shared exception code

2007-04-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove qrtems_debug.

2007-04-05	Joel Sherrill <joel@OARcorp.com>

	* clock/clock.c: Removed. File is unused in current source.

2007-03-28	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am: Modify to avoid pulling in too much into minimum
	executable.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-11-15	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am, irq/irq.h: Merge c_rtems_main() into boot_card(). This
	eliminated a file and simplified initialization.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove superfluous -DASM.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.60. Require automake-1.10.

2006-08-09	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: Clean up a bit after adding missing .rela sections.

2006-03-08	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: Add .gnu.linkonce.b.* section.

2006-02-08	Joel Sherrill <joel@OARcorp.com>
