@@ -24,6 +24,7 @@
 #include <rtems/powerpc/powerpc.h>
 
 #include <libcpu/cpuIdent.h>
+#include <libcpu/bat.h>
 #include <libcpu/spr.h>
 
 SPR_RW(SPRG0)
@@ -225,5 +226,18 @@ void bsp_start( void )
    * Initalize RTEMS IRQ system
    */
   BSP_rtems_irq_mng_init(0);
+
+  /*
+   * Setup BATs and enable MMU
+   */
+  /* Memory */
+  setdbat(0, 0x0<<24, 0x0<<24, 1<<24, _PAGE_RW);
+  setibat(0, 0x0<<24, 0x0<<24, 1<<24,        0);
+  /* PCI    */
+  setdbat(1, 0x8<<24, 0x8<<24, 1<<24,  IO_PAGE);
+  setdbat(2, 0xc<<24, 0xc<<24, 1<<24,  IO_PAGE);
+
+  _write_MSR(_read_MSR() | MSR_DR | MSR_IR);
+  asm volatile("sync; isync");
 
 }
